# saraise-application

./: .gitignore  .pre-commit-config.yaml  .semgrep.yml  .semgrepignore  AGENTS.md  BOTH_CONTAINERS_RUNNING.md  BUILD_SUCCESS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTAINER_FIXES.md  CONTRIBUTING.md  CRM_MODULE_COMPLETION_SUMMARY.md  CRM_MODULE_DOCKER_VALIDATION.md  CRM_MODULE_IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION_GUIDE.md  NEXT_STEPS.md  NOTICE  PHASE_7_COMPLETE.md  PHASE_7_DOCKER_TEST_RESULTS.md  PHASE_7_FINAL_STATUS.md  PHASE_7_IMPLEMENTATION_COMPLETE.md  PHASE_7_NEXT_STEPS.md  PHASE_7_STATUS.md  PHASE_7_TEST_SUMMARY.md  PLATFORM_MANAGEMENT_MODE_AWARE_CORRECTION.md  PORT_MAPPING.md  PR_DESCRIPTION.md  QUICK_START.md  README-DOCKER-CONSOLIDATED.md  README-DOCKER.md  README.md  SECURITY.md  SUPPORT.md  TEST_AND_CONTAINER_SETUP.md  TEST_COVERAGE_STATUS.md  TEST_COVERAGE_SUMMARY.md  TEST_RESULTS.md  (+4 more)
backend/: Dockerfile  README.md  conftest.py  coverage.json  manage.py  mypy-baseline.txt  mypy-precommit.ini  pyproject.toml  pytest.ini  requirements.txt  schema.yml  start.sh  test_output.txt  test_output_app.txt
backend/migration-backups-2026-01-09/: README.md  ai_agent_0001_initial_BACKUP.py  tenant_mgmt_0001_initial_BACKUP.py
backend/migration-backups-2026-01-10/current-migrations/: 0001_create_agent.py  0001_create_tenant.py  0004_create_compliance_check.py  0007_create_guardrail_violation.py
backend/saraise_backend/: __init__.py  settings.py  settings_static_analysis.py  urls.py  wsgi.py
backend/saraise_spi/: __init__.py  extension_points.py
backend/saraise_spi/tests/: __init__.py  test_extension_points.py
backend/scripts/: README.md  create_final_indexes.py  create_migrations.py  fix-root-causes.py  fix-test-failures.py  fix-test-imports.py  fix_all_index_batches.py  fix_fk_field_names_in_indexes.py  fix_index_migrations.py  fix_tenant_indexes.py  generate_migrations.sh  makemigrations_new_modules.py  mutation_gate.py  mypy_baseline.py  split_ai_agent_complete.py  split_ai_agent_with_embedded_indexes.py  split_migration_0004.py  split_migration_ai_agent_0001.py  split_migration_ai_agent_0001_v2.py  split_migration_tenant_0001.py  test_mypy_baseline.py  validate_new_modules.py
backend/src/: README.md  conftest.py
backend/src/core/: README.md  __init__.py  apps.py  auth_api.py  auth_urls.py  auth_utils.py  authentication.py  compliance_models.py  compliance_service.py  entitlement_models.py  entitlement_service.py  health.py  metrics.py  models.py  module_guardrail_models.py  module_guardrail_service.py  module_installation_models.py  module_installer.py  module_manifest_schema.py  (+8 more)
backend/tests/: README.md
(+3383 files in other folders)
